# Flood-detect

./: Flood_Prediction_XGBoost_Updated.ipynb
Backend/: README.md
Backend/crow_backend/: CMakeLists.txt
Backend/crow_backend/include/: model_service.h  weather_service.h
Backend/crow_backend/models/: README.md
Backend/crow_backend/src/: gemini_service.cpp  main.cpp  model_service.cpp  weather_service.cpp
Backend/flask_backend/: .env  .env.example  app.py  requirements.txt
Backend/flask_backend/models/: README.md
Backend/flask_backend/services/: __init__.py  gemini.py  models.py  weather.py
Model/LightGBM/: config.json  feature_names.json  flood_model.joblib  flood_model.json  flood_model.pkl  inference.py
Model/Proximal Policy Optimization/: data
Model/Reinforcement Learning/: policy.optimizer.pth  policy.pth  system_info.txt
Model/XGBoost/: app.py  config.json  flood_model.json  flood_model.pkl  requirements.txt
Notebooks/LightGBM/: Flood_Classification_LightGBM.ipynb
Notebooks/Proximal Policy Optimization/: PPO_RL_Agent.ipynb
Notebooks/RL/: flood_rl_pipeline.py
Notebooks/Reinforcement Learning/: flood_rl_pipeline.py
Notebooks/XGBoost/: Flood_Prediction_XGBoost.ipynb
Scripts/LightGBM/: flood_classification_lightgbm.py
Scripts/XGBoost/: flood_prediction_xgboost.py
app/Flutter/: pubspec.yaml
app/Flutter/android/app/src/main/: AndroidManifest.xml
app/Flutter/lib/: main.dart
app/Flutter/lib/screens/: flood_prediction_screen.dart
app/Flutter/lib/services/: api_service.dart
app/Flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
app/react native/: API_INTEGRATION_EXAMPLES.js  AndroidManifest.xml  App.js  app.json  config.js  main.dart  package-lock.json  package.json  pubspec.yaml
app/react native/components/: CustomButton.js
app/react native/screens/: HomeScreen.js  ResultScreen.js
app/react native/services/: api.js
app/react native/styles/: theme.js
archive/: Flood_Test.ipynb  flood_test.py
research/: List of Research Papers.xlsx
